validator_derive_tests/tests/compile-fail/range/no_args.stderr
error: Invalid attribute #[validate(range(...))] on field `s`:

         = note: Validator `range` requires at least 1 argument
         = help: Add the argument `min` or `max`, `exclusive_min` or `exclusive_max`

 --> tests/compile-fail/range/no_args.rs:5:5
  |
5 |     #[validate(range())]
  |     ^^^^^^^^^^^^^^^^^^^^
